<resources>
    <string name="app_name">BasicCalculus</string>
    <item name="Basic" type="string">Basic Calculus</item>
    <string name="title_activity_welcome">welcome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="Start">Start</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_w">w</string>
    <string name="Basics">Basics</string>
    <string name="Learn">Learn</string>
    <string name="Practice">Practice</string>
    <string name="connect">connect</string>
    <string name="oneDigit">one digit</string>
    <string name="learnMore">Learn more</string>
    <string name="digit3">3 digit</string>

    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="carry">with Carry</string>
    <string name="noCarry">with no Carry</string>
    <string name="simpleSub">Simple Subtraction</string>
    <string name="advancedSub">Advanced Subtraction</string>
    <string name="simpleMul">Simple Multiplication</string>
    <string name="advancedMul">Advanced Multiplication</string>
    <string name="simpleDiv">Simple Division</string>
    <string name="advancedDiv">Advanced Division</string>


</resources>