<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F8FF"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="35dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons"
                android:textColor="#81719E"
                android:text="User: "
                android:textSize="18dp" />
            <Button
                android:id="@+id/lev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:background="@drawable/buttons"
                android:textColor="#81719E"
                android:text="level 0"
                android:textSize="18dp" />
        </LinearLayout>
        <Button
            android:id="@+id/add"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/buttons"
            android:text="@string/addition"
            android:textSize="20sp"
            android:textColor="@color/DarkGoldenRod"

            />
        <Button
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/buttons"
            android:text="@string/subtraction"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:id="@+id/sub"
            android:textColor="@color/DarkGoldenRod"
            />
        <Button
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/buttons"
            android:text="@string/multiplication"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:id="@+id/mul"
            android:textColor="@color/DarkGoldenRod"

            /><Button
            android:layout_width="320dp"
            android:layout_height="50dp"
        android:background="@drawable/buttons"
            android:text="@string/division"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:id="@+id/div"
            android:textColor="@color/DarkGoldenRod"

        />
    </LinearLayout>
</RelativeLayout>