<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5DC"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:textColor="#81719E"
                android:text="User: "
                android:textSize="18dp" />
            <Button
                android:id="@+id/lev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/buttons"
                android:textColor="#81719E"
                android:text="level 0"
                android:textSize="18dp" />
        </LinearLayout>
        <Button
            android:id="@+id/basics"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:background="@drawable/buttons"
            android:text="@string/Basics"
            android:textColor="#81719E"
            android:textSize="25sp"
            android:layout_marginTop="180dp"
            />
        <Button
            android:id="@+id/Learn"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/buttons"
            android:text="@string/Learn"
            android:textColor="#81719E"
            android:textSize="25sp"
            />
        <Button
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:background="@drawable/buttons"
            android:textColor="#81719E"
            android:text="@string/Practice"
            android:layout_marginTop="22dp"
            android:textSize="25sp"
            android:id="@+id/Practice"
            />
    </LinearLayout>
</RelativeLayout>